--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 </head>
 <body>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
+  <section class="container">
+    <div class="container__banner">
+      <img src="./images/image-header-desktop.jpg" alt="">
+    </div>
+    <div class="container__content">
+      <div class="container__content__title">
+        <h1>Get insights that help your business grow.</h1>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
