--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container__content">
       <div class="container__content__title">
-        <h1>Get insights that help your business grow.</h1>
+        <h1>Get <span>insights</span> that help your business grow.</h1>
       </div>
     </div>
   </section>
