--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="container__content__title">
         <h1>Get <span>insights</span> that help your business grow.</h1>
       </div>
+      <div class="container__content__description">
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency</p>
+      </div>
     </div>
   </section>
 
