feat: style for summary

--- a/index.html
+++ b/index.html
@@ -23,6 +23,32 @@
       <div class="container__content__description">
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency</p>
       </div>
+      <div class="container__content__summary">
+        <div class="container__content__summary__topic">
+          <div class="container__content__summary__topic__quantity">
+            10k+
+          </div>
+          <div class="container__content__summary__topic__type">
+            Companies
+          </div>
+        </div>
+        <div class="container__content__summary__topic">
+          <div class="container__content__summary__topic__quantity">
+            314
+          </div>
+          <div class="container__content__summary__topic__type">
+            Templates
+          </div>
+        </div>
+        <div class="container__content__summary__topic">
+          <div class="container__content__summary__topic__quantity">
+            12M+
+          </div>
+          <div class="container__content__summary__topic__type">
+            Queries
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
